--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.3"
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.5.3",
+    "tsyringe": "^4.7.0"
   }
 }
